Update test class for Java 14 ...
- samples only for standard features
- markdown javadoc for JEPs
- organize classes related to Java 14
- improve code readability